# contextd

./: .gitignore  Agent.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Readme.md  TESTING.md  claude.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
crates/core/: Cargo.toml
crates/core/src/: config.rs  error.rs  event.rs  lib.rs  test_utils.rs
crates/pipeline/: Cargo.toml
crates/pipeline/src/: heuristics.rs
crates/sources/: Cargo.toml
crates/sources/src/: filesystem.rs  lib.rs  proc_poller.rs  shell.rs
crates/store/: Cargo.toml
crates/store/src/: db.rs
crates/store/tests/: integration.rs
