[package]
name = "contextd-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
name = "contextd_core"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
