[package]
name = "pipeline"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
serde_json = { workspace = true }
contextd_core = { package = "contextd-core", path = "../core" }
