[package]
name = "sources"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = { workspace = true }
contextd_core = { package = "contextd-core", path = "../core" }
notify = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
sysinfo = "0.30"
ulid = { workspace = true }
